Fix Overflow Bug
added css to make no overflow to fix hover on circles bug

--- a/projects/ashevillegreenways/css/style.css
+++ b/projects/ashevillegreenways/css/style.css
@@ -4,7 +4,7 @@ body, html{
     height: 100%;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
-
+    overflow: hidden;
 }
 
 #mapContainer{
